fix: Make mic icon visible on Client Management page

--- a/Invoice-UI/src/app/Client-Management/client-management.component.css
+++ b/Invoice-UI/src/app/Client-Management/client-management.component.css
@@ -69,6 +69,7 @@
   flex-grow: 1;
   max-width: 500px;
   min-width: 200px;
+  position: relative;
   display: flex;
   align-items: center;
 }
